Fixed a little bug on the navbar on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ body {
         order: 2;
     }
     .navbar {
-        width: 100%;
+        width: auto;
         -webkit-box-ordinal-group:4;
         -webkit-order:3;
         -ms-flex-order:3;
